kubernetes/prod/app-prod-api-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-api
  labels:
    app: prod-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prod-api
  template:
    metadata:
      labels:
        app: prod-api
    spec:
      containers:
        - name: prod-api
          imagePullPolicy: Always
          image: jaeestee/gene_api:hw8
          ports:
          - name: http
            containerPort: 5000
