kubernetes/prod/app-prod-db-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-redis
  labels:
    app: prod-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prod-redis
  template:
    metadata:
      labels:
        app: prod-redis
    spec:
      containers:
        - name: prod-redis
          image: redis:7
          volumeMounts:
          - name: prod-redis-pvc
            mountPath: "/data"
      volumes:
      - name: prod-redis-pvc
        persistentVolumeClaim:
          claimName: prod-redis-pvc
