kubernetes/prod/app-prod-api-nodeport.yml
---
kind: Service
apiVersion: v1
metadata:
    name: prod-api-nodeport-service
spec:
    type: NodePort
    selector:
        app: prod-api
    ports:
        - port: 5000
          targetPort: 5000
