kubernetes/prod/app-prod-db-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prod-redis-service
spec:
  type: ClusterIP
  selector:
    app: prod-redis
  ports:
  - name: prod-redis
    port: 6379
    targetPort: 6379
