kubernetes/prod/app-prod-api-ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: prod-api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "spacemissionanalysis.coe332.tacc.cloud"
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: prod-api-nodeport-service
              port:
                  number: 30312
